@@ -306,11 +306,74 @@ namespace SimpleInjector
         }
 
         /// <summary>
+        /// Creates a new <see cref="InstanceProducer"/> instance for the given <typeparamref name="TService"/>
+        /// that will create new instances of specified <typeparamref name="TImplementation"/> with the 
+        /// caching as specified by this lifestyle.
+        /// </summary>
+        /// <typeparam name="TService">The interface or base type that can be used to retrieve the instances.</typeparam>
+        /// <typeparam name="TImplementation">The concrete type that will be created.</typeparam>
+        /// <param name="container">The <see cref="Container"/> instance for which a 
+        /// <see cref="InstanceProducer"/> must be created.</param>
+        /// <returns>A new <see cref="InstanceProducer"/> instance.</returns>
+        /// <exception cref="ArgumentNullException">Thrown when <paramref name="container"/> is a null
+        /// reference (Nothing in VB).</exception>
+        [SuppressMessage("Microsoft.Design", "CA1004:GenericMethodsShouldProvideTypeParameter",
+            Justification = @"
+                Supplying the generic type arguments is needed, since internal types can not be created using 
+                the non-generic overloads in a sandbox.")]
+        public InstanceProducer CreateProducer<TService, TImplementation>(Container container)
+            where TImplementation : class, TService
+            where TService : class
+        {
+            return new InstanceProducer(typeof(TService),
+                this.CreateRegistration<TService, TImplementation>(container));
+        }
+
+        /// <summary>
+        /// Creates a new <see cref="InstanceProducer"/> instance for the given <typeparamref name="TService"/>
+        /// that will create new instances instance using the supplied <paramref name="instanceCreator"/> 
+        /// with the caching as specified by this lifestyle.
+        /// </summary>
+        /// <typeparam name="TService">The interface or base type that can be used to retrieve the instances.</typeparam>
+        /// <param name="instanceCreator">A delegate that will create a new instance of 
+        /// <typeparamref name="TService"/> every time it is called.</param>
+        /// <param name="container">The <see cref="Container"/> instance for which a 
+        /// <see cref="InstanceProducer"/> must be created.</param>
+        /// <returns>A new <see cref="InstanceProducer"/> instance.</returns>
+        /// <exception cref="ArgumentNullException">Thrown when either <paramref name="instanceCreator"/> or
+        /// <paramref name="container"/> are null references (Nothing in VB).</exception>
+        public InstanceProducer CreateProducer<TService>(Func<TService> instanceCreator,
+            Container container)
+            where TService : class
+        {
+            return new InstanceProducer(typeof(TService), 
+                this.CreateRegistrationCore<TService>(instanceCreator, container));
+        }
+        
+        /// <summary>
+        /// Creates a new <see cref="InstanceProducer"/> instance for the given <paramref name="serviceType"/>
+        /// that will create new instances of specified <paramref name="implementationType"/> with the 
+        /// caching as specified by this lifestyle.
+        /// </summary>
+        /// <param name="serviceType">The interface or base type that can be used to retrieve the instances.</param>
+        /// <param name="implementationType">The concrete type that will be registered.</param>
+        /// <param name="container">The <see cref="Container"/> instance for which a 
+        /// <see cref="Registration"/> must be created.</param>
+        /// <returns>A new <see cref="InstanceProducer"/> instance.</returns>
+        /// <exception cref="ArgumentNullException">Thrown when on of the supplied arguments is a null 
+        /// reference (Nothing in VB).</exception>
+        public InstanceProducer CreateProducer(Type serviceType, Type implementationType, Container container)
+        {
+            return new InstanceProducer(serviceType,
+                this.CreateRegistration(serviceType, implementationType, container));
+        }
+
+        /// <summary>
         /// Creates a new <see cref="Registration"/> instance defining the creation of the
         /// specified <typeparamref name="TImplementation"/> with the caching as specified by this lifestyle.
         /// </summary>
         /// <typeparam name="TService">The interface or base type that can be used to retrieve the instances.</typeparam>
-        /// <typeparam name="TImplementation">The concrete type that will be registered.</typeparam>
+        /// <typeparam name="TImplementation">The concrete type that will be created.</typeparam>
         /// <param name="container">The <see cref="Container"/> instance for which a 
         /// <see cref="Registration"/> must be created.</param>
         /// <returns>A new <see cref="Registration"/> instance.</returns>
